--- a/frappe/public/scss/desk/report.scss
+++ b/frappe/public/scss/desk/report.scss
@@ -134,8 +134,8 @@
 
 		.select-icon .icon {
 			position: absolute;
-			top: 7px;
-			right: 12px;
+			top: 5px;
+			right: 7px;
 			pointer-events: none;
 		}
 	}
